# snooker

./: .gitmodules  README.md  ambiata-snooker.cabal  cabal.project  master.toml
data/: expression-2014-06-02  mackerel-2014-01-01
java/: SequenceCheck.java  TestDecompressor.java
main/: snooker-bench.hs
src/: Snooker.hs
src/Snooker/: Binary.hs  Codec.hs  Compression.hs  Conduit.hs  Data.hs  Header.hs  MD5.hs  Segmented.hs  Storable.hs  Streaming.hs  VInt.hs  Writable.hs
src/Snooker/Codec/: BZip2.hs  Snappy.hs
test/: test-io.hs  test.hs
test/Test/Snooker/: Arbitrary.hs  Codec.hs  Conduit.hs  Factset.hs  Foreign.hs  Hadoop.hs  Header.hs  MD5.hs  Segmented.hs  Util.hs  VInt.hs  Writable.hs
