name:                  ambiata-snooker
version:               0.0.1
license:               AllRightsReserved
author:                Ambiata <info@ambiata.com>
maintainer:            Ambiata <info@ambiata.com>
copyright:             (c) 2015 Ambiata.
synopsis:              ambiata-snooker
category:              System
cabal-version:         >= 1.8
build-type:            Simple
description:           ambiata-snooker

library
  build-depends:
                       base                            >= 3          && < 5
                     , ambiata-p
                     , ambiata-snapper
                     , ambiata-x-eithert
                     , ambiata-x-show
                     , ambiata-x-templatehaskell
                     , base16-bytestring               == 0.1.*
                     , binary                          >= 0.7        && < 0.9
                     , bytestring                      == 0.10.*
                     , conduit                         == 1.2.*
                     , conduit-extra                   == 1.1.*
                     , cryptonite                      == 0.15.*
                     , memory                          >= 0.11       && < 0.13
                     , mmorph                          == 1.0.*
                     , mutable-containers              == 0.3.*
                     , primitive                       == 0.6.*
                     , resourcet                       == 1.1.*
                     , template-haskell                == 2.*
                     , text                            == 1.2.*
                     , transformers                    >= 0.4        && < 0.6
                     , transformers-base               == 0.4.*
                     , vector                          == 0.11.*
                     , void                            == 0.7.*

  ghc-options:
                       -Wall

  hs-source-dirs:
                       src

  exposed-modules:
                       Paths_ambiata_snooker
                       Snooker
                       Snooker.Binary
                       Snooker.Codec
                       Snooker.Conduit
                       Snooker.Data
                       Snooker.VInt
                       Snooker.Writable

test-suite test
  type:
                       exitcode-stdio-1.0

  main-is:
                       test.hs

  ghc-options:
                       -Wall -threaded -O2

  hs-source-dirs:
                       test

  build-depends:
                       base                            >= 3          && < 5
                     , ambiata-disorder-core
                     , ambiata-disorder-corpus
                     , ambiata-p
                     , ambiata-snooker
                     , ambiata-x-eithert
                     , binary                          >= 0.7        && < 0.9
                     , bytestring                      == 0.10.*
                     , conduit                         == 1.2.*
                     , cryptonite                      == 0.15.*
                     , mmorph                          == 1.0.*
                     , mutable-containers              == 0.3.*
                     , QuickCheck                      >= 2.8.2      && < 2.9
                     , quickcheck-instances            == 0.3.*
                     , text                            == 1.2.*
                     , transformers                    >= 0.4        && < 0.6
                     , vector                          == 0.11.*
                     , void                            == 0.7.*

test-suite test-io
  type:
                       exitcode-stdio-1.0

  main-is:
                       test-io.hs

  ghc-options:
                       -Wall -threaded -O2

  hs-source-dirs:
                       test

  build-depends:
                       base                            >= 3          && < 5
                     , ambiata-disorder-core
                     , ambiata-disorder-corpus
                     , ambiata-p
                     , ambiata-snooker
                     , ambiata-x-eithert
                     , base16-bytestring               == 0.1.*
                     , binary                          >= 0.7        && < 0.9
                     , bytestring                      == 0.10.*
                     , conduit                         == 1.2.*
                     , conduit-combinators             == 1.0.*
                     , conduit-extra                   == 1.1.*
                     , cryptonite                      == 0.15.*
                     , QuickCheck                      >= 2.8.2      && < 2.9
                     , quickcheck-instances            == 0.3.*
                     , resourcet                       == 1.1.*
                     , text                            == 1.2.*
                     , vector                          == 0.11.*
