name:                  ambiata-snooker
version:               0.0.1
license:               AllRightsReserved
author:                Ambiata <info@ambiata.com>
maintainer:            Ambiata <info@ambiata.com>
copyright:             (c) 2015 Ambiata.
synopsis:              ambiata-snooker
category:              System
cabal-version:         >= 1.8
build-type:            Simple
description:           ambiata-snooker

library
  build-depends:
                       base                            >= 3          && < 5
                     , ambiata-anemone
                     , ambiata-p
                     , ambiata-snapper
                     , ambiata-x-bytestring
                     , ambiata-x-eithert
                     , ambiata-x-show
                     , base16-bytestring               == 0.1.*
                     , binary                          >= 0.7        && < 0.9
                     , bytestring                      == 0.10.*
                     , conduit                         == 1.2.*
                     , conduit-extra                   == 1.1.*
                     , cryptonite                      == 0.15.*
                     , memory                          >= 0.11       && < 0.13
                     , mmorph                          == 1.0.*
                     , primitive                       == 0.6.*
                     , resourcet                       == 1.1.*
                     , text                            == 1.2.*
                     , transformers                    >= 0.4        && < 0.6
                     , transformers-base               == 0.4.*
                     , vector                          >= 0.10       && < 0.12
                     , void                            == 0.7.*

  ghc-options:
                       -Wall -O2

  hs-source-dirs:
                       src

  exposed-modules:
                       Snooker.Binary
                       Snooker.Codec
                       Snooker.Conduit
                       Snooker.Data
                       Snooker.MD5
                       Snooker.Segmented
                       Snooker.Storable
                       Snooker.VInt
                       Snooker.Writable

executable snooker-bench
    ghc-options:
                       -Wall -threaded -O2
    main-is:
                       main/snooker-bench.hs

    build-depends:
                       base
                     , ambiata-p
                     , ambiata-snooker
                     , ambiata-x-eithert
                     , binary                          >= 0.7        && < 0.9
                     , bytestring                      == 0.10.*
                     , conduit                         == 1.2.*
                     , conduit-combinators             == 1.0.*
                     , conduit-extra                   == 1.1.*
                     , mmorph                          == 1.0.*
                     , mwc-random                      == 0.13.*
                     , QuickCheck                      >= 2.7        && < 2.9
                     , quickcheck-instances            == 0.3.*
                     , resourcet                       == 1.1.*
                     , text                            == 1.2.*
                     , thyme                           == 0.3.*
                     , transformers                    >= 0.4        && < 0.6
                     , vector                          >= 0.10       && < 0.12
                     , vector-space                    == 0.10.*
                     , void                            == 0.7.*

test-suite test
  type:
                       exitcode-stdio-1.0

  main-is:
                       test.hs

  ghc-options:
                       -Wall -threaded -O2

  hs-source-dirs:
                       test

  build-depends:
                       base                            >= 3          && < 5
                     , ambiata-anemone
                     , ambiata-disorder-core
                     , ambiata-disorder-corpus
                     , ambiata-disorder-jack
                     , ambiata-p
                     , ambiata-snooker
                     , ambiata-x-eithert
                     , binary                          >= 0.7        && < 0.9
                     , bytestring                      == 0.10.*
                     , conduit                         == 1.2.*
                     , cryptonite                      == 0.15.*
                     , mmorph                          == 1.0.*
                     , mutable-containers              == 0.3.*
                     , QuickCheck                      >= 2.8.2      && < 2.9
                     , quickcheck-instances            == 0.3.*
                     , resourcet                       == 1.1.*
                     , text                            == 1.2.*
                     , transformers                    >= 0.4        && < 0.6
                     , vector                          >= 0.10       && < 0.12
                     , void                            == 0.7.*

test-suite test-io
  type:
                       exitcode-stdio-1.0

  main-is:
                       test-io.hs

  ghc-options:
                       -Wall -threaded -O2

  hs-source-dirs:
                       test

  build-depends:
                       base                            >= 3          && < 5
                     , ambiata-disorder-core
                     , ambiata-disorder-corpus
                     , ambiata-p
                     , ambiata-snooker
                     , ambiata-x-eithert
                     , base16-bytestring               == 0.1.*
                     , binary                          >= 0.7        && < 0.9
                     , bytestring                      == 0.10.*
                     , conduit                         == 1.2.*
                     , conduit-combinators             == 1.0.*
                     , conduit-extra                   == 1.1.*
                     , cryptonite                      == 0.15.*
                     , QuickCheck                      >= 2.8.2      && < 2.9
                     , quickcheck-instances            == 0.3.*
                     , resourcet                       == 1.1.*
                     , text                            == 1.2.*
                     , vector                          >= 0.10       && < 0.12
