name:                  ambiata-snooker
version:               0.0.1
license:               BSD3
author:                Ambiata <info@ambiata.com>
maintainer:            Ambiata <info@ambiata.com>
copyright:             (c) 2015 Ambiata.
synopsis:              ambiata-snooker
category:              System
cabal-version:         >= 1.8
build-type:            Simple
description:           ambiata-snooker

library
  build-depends:
                       base                            >= 3          && < 5
                     , ambiata-anemone
                     , ambiata-p
                     , ambiata-snapper
                     , ambiata-x-bytestring
                     , ambiata-x-show
                     , base16-bytestring
                     , binary
                     , bytestring
                     , bzlib
                     , zlib
                     , conduit                         >= 1.2        && < 1.3
                     , conduit-extra
                     , cryptonite
                     , transformers-either
                     , memory
                     , mmorph
                     , primitive
                     , resourcet
                     , text
                     , transformers
                     , transformers-base
                     , vector
                     , void

  ghc-options:
                       -Wall -O2

  hs-source-dirs:
                       src

  exposed-modules:
                       Snooker.Binary
                       Snooker.Codec
                       Snooker.Codec.Snappy
                       Snooker.Codec.BZip2
                       Snooker.Conduit
                       Snooker.Data
                       Snooker.MD5
                       Snooker.Segmented
                       Snooker.Storable
                       Snooker.VInt
                       Snooker.Writable

executable snooker-bench
    ghc-options:
                       -Wall -threaded -O2
    main-is:
                       main/snooker-bench.hs

    build-depends:
                       base
                     , ambiata-p
                     , ambiata-snooker
                     , binary
                     , bytestring
                     , conduit
                     , conduit-extra
                     , transformers-either
                     , mmorph
                     , mwc-random
                     , QuickCheck
                     , quickcheck-instances
                     , resourcet
                     , text
                     , thyme
                     , transformers
                     , vector
                     , vector-space
                     , void

test-suite test
  type:
                       exitcode-stdio-1.0

  main-is:
                       test.hs

  ghc-options:
                       -Wall -threaded -O2

  hs-source-dirs:
                       test

  build-depends:
                       base
                     , ambiata-anemone
                     , ambiata-disorder-core
                     , ambiata-disorder-corpus
                     , ambiata-disorder-jack
                     , ambiata-p
                     , ambiata-snooker
                     , binary
                     , bytestring
                     , conduit
                     , cryptonite
                     , transformers-either
                     , mmorph
                     , mutable-containers
                     , QuickCheck
                     , quickcheck-instances
                     , resourcet
                     , text
                     , transformers
                     , vector
                     , void

test-suite test-io
  type:
                       exitcode-stdio-1.0

  main-is:
                       test-io.hs

  ghc-options:
                       -Wall -threaded -O2

  hs-source-dirs:
                       test

  build-depends:
                       base                            >= 3          && < 5
                     , ambiata-disorder-core
                     , ambiata-disorder-corpus
                     , ambiata-p
                     , ambiata-snooker
                     , base16-bytestring
                     , binary
                     , bytestring
                     , conduit
                     , conduit-extra
                     , cryptonite
                     , QuickCheck
                     , quickcheck-instances
                     , transformers-either
                     , resourcet
                     , text
                     , vector


benchmark benchmarks
  type:
                       exitcode-stdio-1.0

  main-is:
                       benchmarks.hs

  hs-source-dirs:
                       bench

  ghc-options:
                       -Wall -threaded -O2

  build-depends:
                       base                            >= 3          && < 5
                     , ambiata-anemone
                     , ambiata-p
                     , ambiata-snooker
                     , binary
                     , bytestring
                     , conduit
                     , cryptonite
                     , criterion
                     , transformers-either
                     , mmorph
                     , mutable-containers
                     , text
                     , transformers
                     , vector
                     , void